doc/rust/fscl-k8s/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fscl
  labels:
    fscl.io/name: fscl
---
apiVersion: v1
kind: Namespace
metadata:
  name: fscl-process
  labels:
    fscl.io/name: fscl-process
